--- a/stories/Introduction.mdx
+++ b/stories/Introduction.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/blocks";
-import Image from "next/image";
 
 <Meta title="Example/Introduction" />
 
+# Em produção
